# best-of-n-mcts-tree-search-learned-dynamics

./: .gitignore  README.md  pyproject.toml
docs/: claim_audit.md  final_audit.md  novelty_map.md  proof_attack.md
experiments/: run_claim_audit.py  run_cliffwalking_benchmark.py  run_expansion_suite.py  run_mechanism.py  run_tail_stress.py
paper/: main.tex  references.bib
paper/final/: best of n mcts tree search learned dynamics-v4-manifest.json
paper/tables/: expansion_summary.csv
results/: claim_audit.json
results/cliffwalking_benchmark/: aggregate.json  effects.csv  metrics.csv
results/expansion/: claim_audit.json  manifest.json  metrics.csv  paired_deltas.csv
results/full/: depth_profile.csv  episode_metrics.csv  manifest.json  pairwise_deltas.csv  plan_metrics.csv  root_stats.json  summary.csv  tail_metrics.csv
results/smoke/: depth_profile.csv  episode_metrics.csv  manifest.json  pairwise_deltas.csv  plan_metrics.csv  root_stats.json  summary.csv  tail_metrics.csv
results/tail_stress/: claim_audit.json  manifest.json  metrics.csv  paired_deltas.csv  tail_summary.csv
scripts/: build_paper.ps1
src/bonmcts/: __init__.py  diagnostics.py  envs.py  models.py  planners.py
src/search_concentration_audit/: __init__.py  cliff_benchmark.py  diagnostics.py  models.py  planners.py
tests/: test_cliff_benchmark.py  test_diagnostics.py  test_envs.py  test_expansion_suite.py  test_models.py  test_planners.py  test_tail_stress.py
