[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search-concentration-audit"
version = "0.1.0"
description = "Controlled audits of search concentration in MCTS with biased learned dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jason Wang"}]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
